# mystic_bots

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  PROJECT_INFO.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.claude/commands/: commit.md
.github/workflows/: prod-deploy.yml
config/: asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
core/: admin.py  apps.py  base_entity.py  containers.py  entities.py  enums.py  exceptions.py  loki_logger.py  models.py
core/migrations/: 0001_initial.py  0002_user_last_activity.py
core/repositories/: __init__.py  base.py  user.py
docker/: Dockerfile  entrypoint.sh
docs/: MAIN.md  PLAN.md  USAGE.md  VERSION.md
docs/project-template/: .env.example  CLAUDE.md  Makefile  PROJECT_INFO.md  README.md  docker-compose-prod.yml  docker-compose.yml
docs/tasks/: TASK_001_complete.md  TASK_001_processing.md  TASK_002.md  TASK_002_processing.md  TASK_003.md  TASK_003_complete.md  TASK_003_processing.md  TASK_004.md  TASK_004_complete.md  TASK_004_processing.md  TASK_005.md  TASK_005_processing.md  TASK_006.md  TASK_006_complete.md  TASK_006_processing.md  TASK_007.md  TASK_007_complete.md  TASK_007_processing.md  TASK_008.md  TASK_008_processing.md  TASK_009.md  TASK_009_complete.md  TASK_009_processing.md  TASK_010.md  TASK_010_complete.md  TASK_010_processing.md  TASK_011.md  TASK_011_complete.md  TASK_012.md  TASK_012_complete.md  TASK_013.md  TASK_013_complete.md  TASK_014_complete.md  TASK_014_new.md  TASK_015_complete.md  TASK_015_new.md  TASK_016_complete.md  TASK_016_new.md  TASK_017.md  TASK_017_complete.md  (+132 more)
horoscope/: admin.py  callbacks.py  config.py  entities.py  enums.py  exceptions.py  keyboards.py  messages.py  models.py  states.py  translations.py  utils.py
horoscope/handlers/: admin.py  followup.py  horoscope.py  language.py  settings.py  subscription.py  utils.py  wizard.py
horoscope/migrations/: 0001_initial.py  0002_subscription_reminder_sent_at.py  0003_userprofile_preferred_language.py  0004_horoscope_failed_to_send_at_horoscope_sent_at.py  0005_alter_horoscope_options_alter_subscription_options_and_more.py  0006_llmusage.py  (+4 more)
logos/: ad_texts.txt
telegram_bot/: app_context.py  bot.py  entities.py  exceptions.py  helpers.py  models.py  scheduler.py  states.py
(+101 files in other folders)
