[project]
name = "mystic-bots"
version = "0.1.0"
description = "Telegram bots for personalized horoscopes"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
name = "mystic-bots"
version = "0.1.0"
description = "Telegram bots for personalized horoscopes"
authors = []
readme = "README.md"
packages = [
    { include = "core" },
    { include = "telegram_bot" },
    { include = "horoscope" },
    { include = "config" },
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
aiogram = "^3.3"
redis = "^5.0"
psycopg2-binary = "^2.9"
pydantic = "^2.5"
dependency-injector = "^4.41"
asgiref = "^3.7"
aiohttp = "^3.9"
aiofiles = "^23.2"
celery = {version = "^5.4", extras = ["redis"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.5"
pytest-asyncio = "^0.21"
aiogram-test-framework = "^1.0.1"
ruff = "^0.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["horoscope/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
DJANGO_SETTINGS_MODULE = "config.settings_test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
