[project]
name = "mystic-bots"
version = "0.1.0"
description = "Telegram bots for personalized horoscopes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6",
    "aiogram>=3.3,<4",
    "redis>=5.0,<6",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2.5,<3",
    "dependency-injector>=4.41,<5",
    "asgiref>=3.7,<4",
    "aiohttp>=3.9,<4",
    "aiofiles>=23.2",
    "celery[redis]>=5.4,<6",
    "litellm>=1.40,<2",
]

[dependency-groups]
dev = [
    "pytest>=7.4,<8",
    "pytest-django>=4.5,<5",
    "pytest-asyncio>=0.21,<1",
    "pytest-cov>=4.1,<6",
    "aiogram-test-framework>=1.0.1,<2",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["horoscope/tests", "telegram_bot/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
DJANGO_SETTINGS_MODULE = "config.settings_test"
